apps/pantry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pantry
  labels:
    app.kubernetes.io/part-of: pantry
