apps/pantry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry
  namespace: pantry
  labels:
    app.kubernetes.io/name: pantry
    app.kubernetes.io/part-of: pantry
spec:
  selector:
    app.kubernetes.io/name: pantry
  ports:
    - name: http
      port: 80
      targetPort: http
